--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     ]
   },
   "devDependencies": {
-    "@types/jest": "^24.0.20"
+    "@types/jest": "^24.0.20",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1"
   }
 }
