--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "axios": "^0.18.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.2",
-    "styled-components": "^4.4.0"
+    "react-scripts": "3.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,7 +30,6 @@
     ]
   },
   "devDependencies": {
-    "@types/jest": "^24.0.20",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1"
   }
