--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,17 @@ before_install:
 
 script:
   - docker run -e CI=true sharad-s/pizzahut-demo npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-2"
+  app: "pizzahut-demo"
+  env: "PizzahutDemo-env"
+  bucket_name:  "elasticbeanstalk-us-east-2-714384412972"
+  bucket_path: "pizzahut-demo"
+  access_key_id:
+    secure: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY"
+  on:
+    branch: master
